--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,7 +8,7 @@
 # exec_always --no-startup-id compton
 exec_always --no-startup-id picom --experimental-backends
 # exec --no-startup-id feh --bg-scale -zsF ~/Pictures/wg/
-exec --no-startup-id feh --bg-scale ~/Pictures/wg/joe.png
+exec --no-startup-id feh --bg-scale ~/Pictures/wg/f1_1.jpg
 
 exec_always --no-startup-id for id in $(xinput list | grep "pointer" | cut -d '=' -f 2 | cut -f 1); do xinput --set-prop $id 'libinput Accel Profile Enabled' 0, 1; done
 
