--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -190,8 +190,8 @@ rounded-corners-exclude = [
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method = "kernel"
 
-blur-method = "dual_kawase";
-blur-strength = 3;
+# blur-method = "dual_kawase";
+# blur-strength = 3;
 
 # blur-size = 2;
 #
